--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"firebase": "^9.6.1",
+		"firebaseui": "^6.0.0",
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
 		"svelte": "^3.44.0",
