--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/kit": "next",
 		"@typescript-eslint/eslint-plugin": "^4.31.1",
 		"@typescript-eslint/parser": "^4.31.1",
+		"autoprefixer": "^10.4.0",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
@@ -24,12 +25,12 @@
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
 		"svelte": "^3.44.0",
+		"svelte-adapter-firebase": "^0.13.1",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.10.1",
+		"tailwindcss": "^3.0.7",
 		"tslib": "^2.3.1",
-		"typescript": "^4.4.3",
-		"autoprefixer": "^10.4.0",
-		"tailwindcss": "^3.0.7"
+		"typescript": "^4.4.3"
 	},
 	"type": "module"
 }
