--- a/.github/workflows/deploy-development.yaml
+++ b/.github/workflows/deploy-development.yaml
@@ -70,3 +70,30 @@ jobs:
       - name: Push Docker container
         run: |-
           docker push gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ secrets.SERVICE_NAME }}:$GITHUB_SHA
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
+    environment: development
+    steps:
+      - name: Checkout
+        uses: 'actions/checkout@v3'
+
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v0'
+        with:
+          credentials_json: ${{ secrets.DEVELOPMENT_SERVICE_ACCOUNT }}
+
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v0'
+
+      - name: Deploy Cloud Run service
+        uses: 'google-github-actions/deploy-cloudrun@v0'
+        with:
+          service: '${{ secrets.SERVICE_NAME }}'
+          image: 'gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ secrets.SERVICE_NAME }}:$GITHUB_SHA'
+          region: 'eu-west-3'
+          env_vars: ''
