--- a/.github/workflows/deploy-development.yaml
+++ b/.github/workflows/deploy-development.yaml
@@ -72,7 +72,7 @@ jobs:
           docker push gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ secrets.SERVICE_NAME }}:$GITHUB_SHA
 
   deploy:
-    needs: build
+    needs: publish
     runs-on: ubuntu-latest
     permissions:
       contents: read
