updated deployment for development github actions

--- a/.github/workflows/deploy-development.yaml
+++ b/.github/workflows/deploy-development.yaml
@@ -77,7 +77,9 @@ jobs:
     permissions:
       contents: read
       id-token: write
-    environment: development
+    environment:
+      name: development
+      url: 'https://${{ github.sha }}-${{ secrets.SERVICE_NAME }}'
     steps:
       - name: Checkout
         uses: 'actions/checkout@v3'
@@ -93,7 +95,6 @@ jobs:
       - name: Deploy Cloud Run service
         uses: 'google-github-actions/deploy-cloudrun@v0'
         with:
-          service: '${{ secrets.SERVICE_NAME }}'
-          image: 'gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ secrets.SERVICE_NAME }}:$GITHUB_SHA'
+          service: '${{ github.sha }}-${{ secrets.SERVICE_NAME }}'
+          image: 'gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ secrets.SERVICE_NAME }}:${{ github.sha }}'
           region: 'eu-west-3'
-          env_vars: ''
