update github action for test

--- a/.github/workflows/deploy-development.yaml
+++ b/.github/workflows/deploy-development.yaml
@@ -79,7 +79,7 @@ jobs:
       id-token: write
     environment:
       name: development
-      url: 'https://${{ github.sha }}-${{ secrets.SERVICE_NAME }}'
+      url: https://${{ github.sha }}-${{ secrets.SERVICE_NAME }}.com
     steps:
       - name: Checkout
         uses: 'actions/checkout@v3'
