updated environment url of the deploy step

--- a/.github/workflows/deploy-development.yaml
+++ b/.github/workflows/deploy-development.yaml
@@ -80,7 +80,7 @@ jobs:
     environment:
       name: development
       url: |-
-        https://${{ github.sha }}-${{ secrets.SERVICE_NAME }}.com
+        https://${{ github.sha }}.com
     steps:
       - name: Checkout
         uses: 'actions/checkout@v3'
