--- a/.github/workflows/deploy-development.yaml
+++ b/.github/workflows/deploy-development.yaml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches: [main]
 
+env:
+  SERVICE_NAME: radixlist-web
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -54,7 +57,7 @@ jobs:
 
       - name: Tag Docker image
         run: |
-          docker tag image:latest gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ secrets.SERVICE_NAME }}:$GITHUB_SHA
+          docker tag image:latest gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ env.SERVICE_NAME }}:$GITHUB_SHA
 
       - id: 'auth'
         uses: 'google-github-actions/auth@v0'
@@ -67,10 +70,12 @@ jobs:
       - name: Login to gcr.io
         run: |-
           gcloud --quiet auth configure-docker
+
       - name: Push Docker container
         run: |-
-          docker push gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ secrets.SERVICE_NAME }}:$GITHUB_SHA
+          docker push gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ env.SERVICE_NAME }}:$GITHUB_SHA
 
+      - name: Set URL
   deploy:
     needs: publish
     runs-on: ubuntu-latest
@@ -79,8 +84,7 @@ jobs:
       id-token: write
     environment:
       name: development
-      url: |-
-        https://${{ github.sha }}.com
+      url: ${{ steps.deploy.outputs.url }}
     steps:
       - name: Checkout
         uses: 'actions/checkout@v3'
@@ -96,6 +100,12 @@ jobs:
       - name: Deploy Cloud Run service
         uses: 'google-github-actions/deploy-cloudrun@v0'
         with:
-          service: '${{ github.sha }}-${{ secrets.SERVICE_NAME }}'
-          image: 'gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ secrets.SERVICE_NAME }}:${{ github.sha }}'
+          service: $(git rev-parse --short HEAD)-${{ env.SERVICE_NAME }}
+          image: 'gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ env.SERVICE_NAME }}:${{ github.sha }}'
           region: 'eu-west-3'
+
+      - name: Set outputs
+        id: vars
+        run: |-
+          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+          echo "::set-output name=url::https://$(git rev-parse --short HEAD)-${{ env.SERVICE_NAME }}.run"
