--- a/.github/workflows/deploy-development.yaml
+++ b/.github/workflows/deploy-development.yaml
@@ -104,6 +104,6 @@ jobs:
       - name: Deploy Cloud Run service
         uses: 'google-github-actions/deploy-cloudrun@v0'
         with:
-          service: '${{ steps.deploy.outputs.sha_short }}-${{ env.SERVICE_NAME }}'
+          service: '${{ git rev-parse --short HEAD }}-${{ env.SERVICE_NAME }}'
           image: 'gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ env.SERVICE_NAME }}:${{ github.sha }}'
           region: 'eu-west-3'
