updated environment url of the deploy step

--- a/.github/workflows/deploy-development.yaml
+++ b/.github/workflows/deploy-development.yaml
@@ -6,6 +6,7 @@ on:
 
 env:
   SERVICE_NAME: radixlist-web
+  DEVELOPMENT_PROJECT_ID: ${{ secrets.DEVELOPMENT_PROJECT_ID }}
 
 jobs:
   build:
@@ -98,8 +99,7 @@ jobs:
 
       - name: Set outputs
         id: sha
-        run: |
-          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
 
       - name: Deploy Cloud Run service
         id: deploy
@@ -107,5 +107,5 @@ jobs:
         with:
           service: '${{ env.SERVICE_NAME }}'
           suffix: ${{ steps.sha.outputs.sha_short }}
-          image: 'gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ env.SERVICE_NAME }}:${{ github.sha }}'
+          image: 'gcr.io/${{ env.DEVELOPMENT_PROJECT_ID }}/${{ env.SERVICE_NAME }}:${{ github.sha }}'
           region: 'eu-west-3'
