updated environment url of the deploy step

--- a/.github/workflows/deploy-development.yaml
+++ b/.github/workflows/deploy-development.yaml
@@ -6,7 +6,7 @@ on:
 
 env:
   SERVICE_NAME: radixlist-web
-  DEVELOPMENT_PROJECT_ID: ${{ secrets.DEVELOPMENT_PROJECT_ID }}
+  DEVELOPMENT_PROJECT_ID: radix-list-development
 
 jobs:
   build:
