--- a/.github/workflows/deploy-development.yaml
+++ b/.github/workflows/deploy-development.yaml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Tag Docker image
         run: |
-          docker tag image:latest gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ env.SERVICE_NAME }}:$GITHUB_SHA
+          docker tag image:latest gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ secrets.SERVICE_NAME }}:$GITHUB_SHA
 
       - id: 'auth'
         uses: 'google-github-actions/auth@v0'
@@ -70,7 +70,7 @@ jobs:
 
       - name: Push Docker container
         run: |-
-          docker push gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ env.SERVICE_NAME }}:$GITHUB_SHA
+          docker push gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ secrets.SERVICE_NAME }}:$GITHUB_SHA
 
   deploy:
     needs: publish
