--- a/.github/workflows/deploy-development.yaml
+++ b/.github/workflows/deploy-development.yaml
@@ -4,6 +4,10 @@ on:
   pull_request:
     branches: [main]
 
+env:
+  SERVICE_NAME: ${{ secrets.SERVICE_NAME }}
+  DEVELOPMENT_PROJECT_ID: ${{ secrets.DEVELOPMENT_PROJECT_ID }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -54,12 +58,12 @@ jobs:
 
       - name: Tag Docker image
         run: |
-          docker tag image:latest gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ secrets.SERVICE_NAME }}:$GITHUB_SHA
+          docker tag image:latest gcr.io/${{ env.DEVELOPMENT_PROJECT_ID }}/${{ env.SERVICE_NAME }}:$GITHUB_SHA
 
       - id: 'auth'
         uses: 'google-github-actions/auth@v0'
         with:
-          credentials_json: ${{ secrets.DEVELOPMENT_SERVICE_ACCOUNT }}
+          credentials_json: ${{ secret.DEVELOPMENT_SERVICE_ACCOUNT }}
 
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v0'
@@ -70,7 +74,7 @@ jobs:
 
       - name: Push Docker container
         run: |-
-          docker push gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ secrets.SERVICE_NAME }}:$GITHUB_SHA
+          docker push gcr.io/${{ env.DEVELOPMENT_PROJECT_ID }}/${{ env.SERVICE_NAME }}:$GITHUB_SHA
 
   deploy:
     needs: publish
@@ -80,7 +84,7 @@ jobs:
       id-token: write
     environment:
       name: development
-      url: ${{ steps.deploy.outputs.url }}
+      url: ${{ steps.url.outputs.url }}
     steps:
       - name: Checkout
         uses: 'actions/checkout@v3'
@@ -101,7 +105,11 @@ jobs:
         id: deploy
         uses: 'google-github-actions/deploy-cloudrun@v0'
         with:
-          service: '${{ secrets.SERVICE_NAME }}'
+          service: '${{ env.SERVICE_NAME }}'
           suffix: ${{ steps.sha.outputs.sha_short }}
-          image: 'gcr.io/${{ secrets.DEVELOPMENT_PROJECT_ID }}/${{ secrets.SERVICE_NAME }}:${{ github.sha }}'
+          image: 'gcr.io/${{ env.DEVELOPMENT_PROJECT_ID }}/${{ env.SERVICE_NAME }}:${{ github.sha }}'
           region: 'europe-west3'
+
+      - name: Set outputs
+        id: url
+        run: echo "::set-output name=url::${{ steps.deploy.outputs.url }}"
