--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -1,4 +1,4 @@
-name: Build, Publish and Deploy Development
+name: Build, Publish and Deploy Production
 
 on:
   pull_request:
@@ -6,7 +6,7 @@ on:
 
 env:
   SERVICE_NAME: ${{ secrets.SERVICE_NAME }}
-  DEVELOPMENT_PROJECT_ID: ${{ secrets.DEVELOPMENT_PROJECT_ID }}
+  PRODUCTION_PROJECT_ID: ${{ secrets.PRODUCTION_PROJECT_ID }}
 
 jobs:
   build:
@@ -58,12 +58,12 @@ jobs:
 
       - name: Tag Docker image
         run: |
-          docker tag image:latest gcr.io/${{ env.DEVELOPMENT_PROJECT_ID }}/${{ env.SERVICE_NAME }}:$GITHUB_SHA
+          docker tag image:latest gcr.io/${{ env.PRODUCTION_PROJECT_ID }}/${{ env.SERVICE_NAME }}:$GITHUB_SHA
 
       - id: 'auth'
         uses: 'google-github-actions/auth@v0'
         with:
-          credentials_json: ${{ secrets.DEVELOPMENT_SERVICE_ACCOUNT }}
+          credentials_json: ${{ secrets.PRODUCTION_SERVICE_ACCOUNT }}
 
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v0'
@@ -74,7 +74,7 @@ jobs:
 
       - name: Push Docker container
         run: |-
-          docker push gcr.io/${{ env.DEVELOPMENT_PROJECT_ID }}/${{ env.SERVICE_NAME }}:$GITHUB_SHA
+          docker push gcr.io/${{ env.PRODUCTION_PROJECT_ID }}/${{ env.SERVICE_NAME }}:$GITHUB_SHA
 
   deploy:
     needs: publish
@@ -96,7 +96,7 @@ jobs:
       - id: 'auth'
         uses: 'google-github-actions/auth@v0'
         with:
-          credentials_json: ${{ secrets.DEVELOPMENT_SERVICE_ACCOUNT }}
+          credentials_json: ${{ secrets.PRODUCTION_SERVICE_ACCOUNT }}
 
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v0'
@@ -111,7 +111,7 @@ jobs:
         with:
           service: '${{ env.SERVICE_NAME }}'
           suffix: ${{ steps.sha.outputs.sha_short }}
-          image: 'gcr.io/${{ env.DEVELOPMENT_PROJECT_ID }}/${{ env.SERVICE_NAME }}:${{ github.sha }}'
+          image: 'gcr.io/${{ env.PRODUCTION_PROJECT_ID }}/${{ env.SERVICE_NAME }}:${{ github.sha }}'
           region: 'europe-west3'
 
       - name: Set outputs
