--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -40,7 +40,7 @@ jobs:
     permissions:
       contents: read
       id-token: write
-    environment: development
+    environment: production
     steps:
       - name: Checkout
         uses: 'actions/checkout@v3'
@@ -87,7 +87,7 @@ jobs:
       contents: read
       id-token: write
     environment:
-      name: development
+      name: production
       url: ${{ steps.url.outputs.url }}
     steps:
       - name: Checkout
