--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"dotenv": "^16.0.0",
+		"firebase": "^9.6.10",
+		"uuid": "^8.3.2"
+	}
 }
